--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css">
-  <link rel="stylesheet" href="battlefield/battlefield.css">
+  <script>document.write('<link rel="stylesheet" href="battlefield/battlefield.css?dev=' + Math.floor(Math.random() * 100) + '"\>');</script>
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
@@ -36,9 +36,10 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/ng-websocket/ng-websocket.js"></script> 
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
-  <script src="battlefield/battlefield.js"></script>
+  <script>document.write('<script src="battlefield/battlefield.js?dev=' + Math.floor(Math.random() * 100) + '"\><\/script>');</script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
